Service Worker can't correctly redirect relative URLs rdar://139498279 https://bugs.webkit.org/show_bug.cgi?id=282427

Reviewed by Per Arne Vollan.

Set the URL of the service worker response slightly before so that it is taken into account for redirections.
One of the WPT test is changing from PASS to FAIL, which aligns with Chrome and Firefox.
This WPT test should probably be fixed or removed upstream.

* LayoutTests/imported/w3c/web-platform-tests/service-workers/service-worker/navigation-redirect.https-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/service-workers/service-worker/navigation-redirect.https_client-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/service-workers/service-worker/redirected-response.https-expected.txt:
* Source/WebCore/workers/service/context/ServiceWorkerFetch.cpp:
(WebCore::ServiceWorkerFetch::processResponse):

Canonical link: https://commits.webkit.org/286470@main